# SquadOVApiServer

./: .gitignore  Cargo.toml  Dockerfile.devapi
config/: config.toml.tmpl
devops/aws/: aws_terraform_dev.profile  dev.profile
devops/aws/glue/: transfer_wow_arenas.py
devops/database/sql/: V00101__UserSpeedCheck.sql  V0083.7__UserSpeedCheck.sql
devops/docker/: local-dev-compose.yml
devops/env/: package-lock.json  squadov_aws_prod_vars.json
devops/k8s/devapi/: values-prod.yaml
devops/k8s/devapi/templates/: deployment.yaml
devops/k8s/ingress-aws/templates/: ingress.yaml
devops/terraform-aws/: run_terraform.sh
devops/terraform-aws/modules/devapi/: glue.tf  glue_jobs.tf  redshift.tf  variables.tf
devops/terraform-aws/modules/iam/: main.tf  variables.tf
devops/terraform-aws/modules/network/: main.tf
devops/terraform-aws/modules/storage/: main.tf
devops/terraform-aws/squadov-dev/: main.tf  variables.tf
devops/terraform-aws/squadov-dev-steven/: .terraform.lock.hcl  main.tf
devops/terraform-aws/squadov-jason/: .terraform.lock.hcl  main.tf
devops/terraform-aws/squadov-prod/: main.tf
docs/: GETTING_STARTED.md  GOOGLE_OAUTH_SETUP.md
lib/squadov_common/src/: lib.rs  matches.rs  rabbitmq.rs  riot.rs  share.rs  speed_check.rs  squad.rs  storage.rs
lib/squadov_common/src/share/: rabbitmq.rs
lib/squadov_common/src/speed_check/: manager.rs
msa/devapi/: Cargo.toml
msa/devapi/openapi/: devapi.yml
msa/devapi/src/: main.rs  openapi.rs  shared.rs
server/src/: api.rs
server/src/api/: api_service.rs  fusionauth.rs  v1.rs
(+23 files in other folders)
