[package]
name = "devapi"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.0.0"
actix-files = "0.6.0"
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.9.0"
config = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.10", default-features = false, features = [ "bigdecimal", "runtime-async-std-native-tls", "macros", "postgres", "json", "ipnetwork", "uuid", "chrono", "offline"] }
log = "0.4.0"
futures = "0.3.13"
reqwest = { version = "0.11.9", features = ["json"] }